<resources>
    <string name="app_name">Github Space</string>
    <string name="searchbarhint">Mau cari siapa?</string>
    <string name="hintForSearch">Mau cari siapa?</string>
    <string name="title1">Followers</string>
    <string name="title2">Followings</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="blog">Blog</string>
    <string name="bio">Bio</string>
    <string name="angka">0000</string>
    <string name="githublink">urlgithub</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="nouser">User Not Found</string>
    <string name="followersnotfound">Followers User Not Found</string>
    <string name="followingnotfound">Following User Not Found</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="setting">Setting</string>
    <string name="nofavorite">There is no favorite User</string>
    <string name="favorite">Favorite</string>
    <string name="screenmode">Screen Mode</string>
    <string name="darkmode">Dark Mode</string>
</resources>