<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">


    <ImageView
        android:id="@+id/ivback"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ivshare"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivprofilepicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:orientation="vertical"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/ivprofilepicture"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angka"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:orientation="vertical"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angka"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followings"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvrealname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivprofilepicture"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvrealname"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/tvblog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/blog"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvcompany"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/tvcompany1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/company"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvlocation"
        tools:layout_editor_absoluteX="132dp" />

    <TextView
        android:id="@+id/tvlocation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/location"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvusername"
        tools:layout_editor_absoluteX="132dp" />

    <TextView
        android:id="@+id/tvbio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvusername"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/bio"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvblog"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/tvcompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/company"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvlocation"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/tvblog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/blog"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvcompany"
        tools:layout_editor_absoluteX="132dp" />

    <TextView
        android:id="@+id/tvlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/location"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvusername"
        tools:layout_editor_absoluteX="30dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvbio"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="3dp"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabTextColor="@android:color/white"
        tools:layout_editor_absoluteX="0dp" />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>